# ros_qr_tracker

./: CMakeLists.txt  CMakeLists_for_macos.txt  CMakeLists_for_ubuntu.txt  CMakeLists_for_windows.txt  Code_Description.md  README.md  README_en.md
include/: QRScanner.h
src/: QRScanner.cpp  main.cpp
